# fastheader

./: README.md  pyproject.toml
bench/: bytes_per_fetch.py
src/fastheader/: __init__.py  cli.py
src/fastheader/core/: __init__.py  model.py  parser_base.py  registry.py  util.py
src/fastheader/io/: __init__.py  base.py  http_async.py  http_sync.py  local.py
src/fastheader/parsers/: __init__.py  jpeg.py  mrc.py  png.py  tiff.py
tests/: create_tiny_mrc.py  test_cli.py  test_cli_tiff.py  test_cli_url.py  test_core.py  test_io_factory.py  test_io_http.py  test_io_local.py  test_jpeg.py  test_mrc.py  test_png.py  test_tiff.py
tests/fixtures/: tiny.mrc
