

[project]
name = "fastheader"
version = "0.1.0"
description = "A python library and client for extracting file headers quickly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "requests",
    "httpx",
]

[project.scripts]
fastheader = "fastheader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
pythonpath = ["src", "."]
markers = [
    "asyncio: marks tests as async",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio",
    "pytest-httpserver",
    "pytest-cov",
]
